# axie-skipper

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
extension/: content.js  inpage.js  manifest.json
