[package]
name = "signer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
hex = "0.4"
http = "0.2"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-bip39 = "0.8"
tiny-hderive = "0.3"
tokio = { version = "1.11", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
warp = "0.3"
secp256k1 = { version = "0.20", features = ["recovery"] }
